admin page working again but need ot fix boot3 markup

--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -48,9 +48,9 @@ $ ->
   $('.unsold').css("width", "#{widthUnsold}%")
 
 #  slimScroll for about piece in event show
-$ ->
-  $(".event-media-html").slimScroll
-    height: '250px'
+# $ ->
+#   $(".event-media-html").slimScroll
+#     height: '250px'
 
 $ ->
   $("#checkout").click ->
