--- a/app/views/admin/event_users/_form.html.erb
+++ b/app/views/admin/event_users/_form.html.erb
@@ -1,4 +1,4 @@
- <%= simple_form_for([:organizer, @event, @event_user], remote: true) do |f| %>
+ <%= simple_form_for([:admin, @event, @event_user], remote: true) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
