--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [:organizer, @event], :validate => true, :html => { class: 'form-horizontal' } do |f| %>
+<%= simple_form_for [:admin, @event], :validate => true, :html => { class: 'form-horizontal' } do |f| %>
 
 
   <fieldset>
