--- a/app/views/notifier/_ticket_email.html.erb
+++ b/app/views/notifier/_ticket_email.html.erb
@@ -57,7 +57,7 @@
 				<div class="page-header">
 					<h5>
 						Ticket Number <%= @ticket.quantity_counter %> for this Customer
-						<small>Present the QR code for addmission and/or readmission subject to the organizer's T&C</small> <br>
+						<small>Present the QR code for addmission and/or readmission subject to the admin's T&C</small> <br>
 					</h5>
 				</div>
 			</td>
