--- a/app/views/notifier/charge_failed.text.erb
+++ b/app/views/notifier/charge_failed.text.erb
@@ -6,7 +6,7 @@ Your card is out of date or was declined for some other reason.
 
 Unfortunately we can't issue your tickets.
 
-Please contact the organizer of your event and quote your order number:
+Please contact the admin of your event and quote your order number:
 
 ljhljlkdfjlsjdsdsdfdffs
 
