--- a/app/views/notifier/event_cancelled.text.erb
+++ b/app/views/notifier/event_cancelled.text.erb
@@ -2,7 +2,7 @@ Hi <%= @order.email %>,
 
 Unfortunately your event has been cancelled.
 
-The Event Organizer add the following message:
+The Event admin add the following message:
 
 <%= @message %>
 
