--- a/app/views/order_mailer/event_deferred.text.erb
+++ b/app/views/order_mailer/event_deferred.text.erb
@@ -2,7 +2,7 @@ Hi <%= @order.email %>
 
 Your Event has been deferred until <%= @new_date %>
 
-The Organizer of the Event gave the following reason:
+The admin of the Event gave the following reason:
 
 <%= @message %>
 
