--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -178,7 +178,7 @@
           <p>
             A listing of people with various degrees of access to administrator functions:
             <ul>
-              <li>Organizer - read and write access, receives payments.</li>
+              <li>admin - read and write access, receives payments.</li>
               <li>Event Admin - read and write access.</li>
               <li>Editor - can edit but with restrictions (cannot access payments)</li>
               <li>Reader - read only access to admin area.</li>
@@ -213,12 +213,12 @@
             <strong><small><i class="icon-asterisk"></i></small> Contact support to activate payments!</strong> This is only a temporary control measure. Again, thanks for your patience.
           </div>
           <p><small><i class="icon-camera-retro"></i><em> charge options</em></small></p>
-          <p><img src="https://s3-us-west-2.amazonaws.com/onehundredmotels/Motels+Organizer+Admin.png" alt=""></p><br>
+          <p><img src="https://s3-us-west-2.amazonaws.com/onehundredmotels/Motels+admin+Admin.png" alt=""></p><br>
           <h4>Charge Options</h4>
           <p>When you next access your Event Admin, you'll notice a new options pane has appeared- 'Charge Options' <i class="icon-asterisk"></i> - this means you have successfully activated payments for your event.</p>
           <dl>
             <dt>Unlock</dt>
-            <dd>To ensure all the event stakeholders (e.g. Artists, Organizers) are in agreement, each authorized admin user has a payment lock which is on by default. Payments will only be processed if <strong>all the locks are off</strong>. If this is the case you'll see <span class="label label-success"><i class="icon-unlock"></i> Payments unlocked!</span> showing on the dashboard. </dd><br>
+            <dd>To ensure all the event stakeholders (e.g. Artists, admins) are in agreement, each authorized admin user has a payment lock which is on by default. Payments will only be processed if <strong>all the locks are off</strong>. If this is the case you'll see <span class="label label-success"><i class="icon-unlock"></i> Payments unlocked!</span> showing on the dashboard. </dd><br>
             <dd>
               <p><small><i class="icon-camera-retro"></i><em> the user list shows a locked or unlocked icon for each admin.</em></small></p>
               <p><img src="https://s3-us-west-2.amazonaws.com/onehundredmotels/foo%40bar.png" alt=""></p><br>
@@ -237,18 +237,18 @@
           </dl><br>
           <h4>Failed Payments</h4>
           <p>Although an order gives you the right to charge a customer's card at some time in the future, it doesn't guarantee funds will be available at that time.</p>
-          <p>Therefore in the event that a customer doesn't have sufficient funds to pay for their order, the charge will be marked as failed. When a charge fails both the customer and event organizer receive email notifications.</p>
+          <p>Therefore in the event that a customer doesn't have sufficient funds to pay for their order, the charge will be marked as failed. When a charge fails both the customer and event admin receive email notifications.</p>
           <p>Another reason for failure is credit card expiry. If a customer's card has expired they will be notified by email with a link to update their card. Once the card has been updated the charge will be processed and tickets issued.</p><br>
           <h4>Receiving Money</h4>
-          <p> The event organizer is paid into his or her account seven days after each successful charge. This is in accordance with Stripe's rules on paying out.</p>
-          <p> 100 Motels never actually holds or processes the proceeds from ticket sales. All payments processing is handled directly by Stripe, all payment transfers go directly to the organizer's Stripe account. </p><br>
+          <p> The event admin is paid into his or her account seven days after each successful charge. This is in accordance with Stripe's rules on paying out.</p>
+          <p> 100 Motels never actually holds or processes the proceeds from ticket sales. All payments processing is handled directly by Stripe, all payment transfers go directly to the admin's Stripe account. </p><br>
           <h4>Fees</h4>
           <p>Stripe's processing fee is 2.9% + 30c per transaction.</p>
           <p>100 Motels' fee is 1% per transaction while in beta.</p>
           <br>
           <h4>Refunds</h4>
           <p>Your customer will be credited with the full price of their refunded order, i.e. the ticket price + fees.</p>
-          <p>There is no extra charge to the organizer for processing refunds. The cost of refunded fees is borne by Stripe and 100 Motels.</p>
+          <p>There is no extra charge to the admin for processing refunds. The cost of refunded fees is borne by Stripe and 100 Motels.</p>
         </div>
       </div>
       <hr class="fancy-hr">
