--- a/app/views/admin/event_users/index.html.erb
+++ b/app/views/admin/event_users/index.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="" id="event-user-validations"></div>
       <div class="span6">
-        <%= link_to 'Authorize a New User for this Event', new_organizer_event_event_user_path, remote: true, class: "new-auth-user btn btn-primary" %>
+        <%= link_to 'Authorize a New User for this Event', new_admin_event_event_user_path, remote: true, class: "new-auth-user btn btn-primary" %>
       </div>
     </div><br>
     <div class="row">
@@ -20,9 +20,9 @@
           <% @event_users.each do |event_user| %>
             <tr id="event_user_<%= event_user.id %>">
               <td><%= event_user.user.profile.email %></td>
-              <td><i class="icon-edit"> </i><%= best_in_place event_user, :state, :type => :select, :collection => [[:reader, 'read'], [:editor, 'edit'], [:event_admin, 'admin'], [:organizer, 'organizer']], path: organizer_event_event_user_path(@event, event_user) %></td>
+              <td><i class="icon-edit"> </i><%= best_in_place event_user, :state, :type => :select, :collection => [[:reader, 'read'], [:editor, 'edit'], [:event_admin, 'admin'], [:admin, 'admin']], path: admin_event_event_user_path(@event, event_user) %></td>
               <td><%= event_user.payment_lock ? raw('<i class="icon-lock"></i>') : raw('<i class="icon-unlock"></i>') %></td>
-              <td><%= link_to raw('<i class="icon-remove"> </i>remove'), organizer_event_event_user_path(@event, event_user), method: :delete, data: {confirm: "Are you sure?"}, remote: true unless event_user.user == current_user %></td>
+              <td><%= link_to raw('<i class="icon-remove"> </i>remove'), admin_event_event_user_path(@event, event_user), method: :delete, data: {confirm: "Are you sure?"}, remote: true unless event_user.user == current_user %></td>
             </tr>
           <% end %>
         </table>
@@ -30,7 +30,7 @@
     </div>
     <div class="row">
       <div class="span4">
-        <%= link_to raw('<i class="icon-double-angle-left"></i> Event Admin'), organizer_event_path(@event), class: "btn btn-large" %>
+        <%= link_to raw('<i class="icon-double-angle-left"></i> Event Admin'), admin_event_path(@event), class: "btn btn-large" %>
       </div>
     </div>
   </div>
