--- a/app/views/admin/events/_defer.html.erb
+++ b/app/views/admin/events/_defer.html.erb
@@ -7,7 +7,7 @@
       <div class="container">
         <div class="row">
           <div class="span6">
-            <%= form_tag(defer_organizer_event_path(@event), method: :post) do %>
+            <%= form_tag(defer_admin_event_path(@event), method: :post) do %>
               <%= date_select("event", "date") %>
               <%= text_area_tag "reason" %>
               <%= submit_tag "Confirm Deferral", class: "btn btn-primary" %>
