--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,7 +17,7 @@
 			<div class="container">
 				<div class="pull-right"><%= @event.filepicker %></div>
 				<h2>
-					<%= @organizer.user_name || "organizer's business name" %> presents<br>
+					<%= @admin.user_name || "admin's business name" %> presents<br>
 					<%= @event.bip_title %><br>
 					<%= @event.formatted_date %> | <%= @event.location %>
 				</h2>
@@ -74,9 +74,9 @@
 </section>
 <hr>
 <section id="event-media" class="event">
-	<div class="row">
-		<div class="col-lg-12">
-			<div class="container">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-10 col-lg-offset-1">
 				<button class="btn edit-about">Edit</button>
 				<div class="event-media-html"><%= @event.about_section %></div>
 			</div>
