--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,29 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-6">
-      <h1>User no. <%= @user.name %></h1>
-      <% @user.events.each do |e| %>
-        <img class="img-responsive" src="<%= e.image %>">
-        <h4><%= e.name %></h4>
-        <span>Cash Cancel Defer Message Checkin</span>
-      <% end %>
+    <div class="col-lg-12">
+      <h1>Hey <%= @user.name %></h1>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="table-responsive">
+        <table class="table table-hover table-bordered user-events-table">
+          <% @user.events.each do |e| %>
+          <legend>Your Events</legend>
+          <tbody>
+            <tr>
+              <td><%= link_to e.name, event_path(e) %></td>
+              <td><button class="btn">Authorize</button></td>
+              <td><button class="btn">Cancel</button></td>
+              <td><button class="btn">Defer</button></td>
+              <td><button class="btn">Message</button></td>
+              <td><%= link_to "Admin", admin_event_path(e) %></td>
+            </tr>
+          </tbody>
+          <% end %>
+        </table>
+      </div>
     </div>
   </div>
 </div>
