--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -1,59 +1,39 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-12">
-      <ul class="list-inline">
-        <li>
-          <div class="btn-group">
-            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-              Change Event
-              <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-              <% @events.each do |e| %>
-              <li><%= link_to "#{truncate(@event.name, length: 15)} | #{truncate(e.location, length: 10)} | #{e.date.strftime('%d %b')}", admin_event_path(e) %></li>
-              <% end %>
-              <li class="divider"></li>
-              <li><%= link_to "New Event", new_admin_event_path, class: '' %></li>
-            </ul>
-          </div>
-        </li>
-        <li><span class="well well-small"> Viewing: <%= link_to "#{truncate(@event.name)} | #{@event.location} | #{@event.date.strftime('%d %b')}", event_path(@event), target: "_blank" %></span></li>
-        <li class="divider-vertical"></li>
-        <li><span class="well well-small"><i class="icon-time"></i> Time: <%= @event.left_to_go  %> left</span></li>
-        <li><span class="well well-small"><i class="icon-money"></i> Sales: <%= number_to_currency(@event.orders.sum(&:total_price)) %></span></li>
-        <li class="visible"><span class="well well-small"><%= @event.private_or_public %></span></li>
-      </ul>
-    </div>
-  </div>
-  <div class="row">
     <div class="col-lg-12 well well-large">
       <div class="row">
-        <div class="col-lg-12">
-          <legend>
-            Sales
-            <span class="pull-right">
-              <%= form_tag admin_event_path(@event), method: :get, class: "form-search" do %>
-                  <div class="input-append">
-                    <%= text_field_tag :query, params[:query], class: "input-medium input-append", placeholder: "Search Orders" %>
-                    <button type="submit" class="btn">Search</button>
-                  </div>
-              <% end %>
-            </span>
-         </legend>
-        </div>
-      </div>
-      <div class="row">
         <div class="col-lg-3">
-            <button class="btn btn-info btn-block hidden-desktop">Sales <%= number_to_currency(@event.orders.sum(&:total_price)) %></button>
+            <div class="btn-group btn-block">
+              <a type="button" class="btn btn-default btn-block dropdown-toggle" data-toggle="dropdown">
+                <%= @event.name %> | <%= @event.location %> | <%= @event.date.strftime('%d %b') %>
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <% @events.each do |e| %>
+                <li><%= link_to "#{truncate(@event.name, length: 15)} | #{truncate(e.location, length: 15)} | #{e.date.strftime('%d %b')}", admin_event_path(e) %></li>
+                <% end %>
+                <li class="divider"></li>
+                <li><%= link_to "New Event", new_admin_event_path, class: '' %></li>
+              </ul>
+            </div>
+            <button class="btn btn-block btn-default">Hide Event</button>
+            <button class="btn btn-block btn-primary">Message Customers</button>
+            <button class="btn btn-warning btn-block">Defer Event (<%= @event.left_to_go  %> left)</button>
+            <button class="btn btn-danger btn-block">Cancel Event</button>
           <% if @orders.any?(&:stripe_event_tickets_sent?) %>
             <button class="btn-success btn-block">Orders Processed <i class="icon-ok"></i></button>
           <% else %>
-            <%= link_to "Cash Orders", charge_all_orders_path(event_id: @event.id), method: :post, class: "btn btn-success btn-block", data: {confirm: 'Sure?'} %>
+            <%= link_to "Cash $100 in Orders", charge_all_orders_path(event_id: @event.id), method: :post, class: "btn btn-success btn-block", data: {confirm: 'Sure?'} %>
           <% end %>
-          <%= link_to "Orders PDF", admin_event_path(@event, format: "pdf"), class: "btn btn-block", target: "_blank" %>
+            <%= link_to "Print <p></p>Orders PDF", admin_event_path(@event, format: "pdf"), class: "btn btn-block btn-info", target: "_blank" %>
         </div>
         <div class="col-lg-9">
-
+          <form class="form-inline" role="form">
+            <div class="form-group col-lg-12 pull-right">
+              <label class="sr-only" for="exampleInputEmail2"></label>
+              <input type="search" class="form-control input-lg" id="exampleInputEmail2" placeholder="Enter email">
+            </div>
+          </form>
           <table class="table table-striped table-bordered" id="admin-customers">
             <thead>
               <tr>
@@ -81,7 +61,6 @@
         </div>
       </div>
       <%= will_paginate @orders %>
-
     </div>
   </div>
 </div>
