--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,68 +1,39 @@
-<div class="container">
+<div class="container well">
   <div class="row">
     <div class="col-lg-12">
-      <h1>Hey <%= @user.name %></h1>
+      <h1 class="page-header">Hey <%= @user.name %></h1>
     </div>
   </div>
   <div class="row">
     <div class="col-lg-6">
-      <legend>Account Settings</legend>
-      <% if current_user.guest? %>
-        <%= link_to "Save Account", signup_path %>
-      <% else %>
-        <form class="form">
-          <div class="control-group">
-            <label class="control-label" for="inputEmail">Name</label>
-            <div class="controls">
-              <i class="icon-edit"></i> <%= current_user.name %>
-            </div>
+      <form class="form-horizontal" role="form">
+        <div class="form-group">
+          <label for="inputEmail1" class="col-lg-2 control-label">Email</label>
+          <div class="col-lg-6">
+            <input type="email" class="form-control" id="inputEmail1" placeholder="<%= @user.email %>">
           </div>
-          <div class="control-group">
-            <label class="control-label" for="inputPassword">Email</label>
-            <div class="controls">
-              <i class="icon-edit"></i>  <%= current_user.email %>
-            </div>
-          </div>
-        </form>
-        <%= link_to "Reset Password", password_resets_path(email: current_user.email), method: :post, class: "btn btn-info" %>
-      <% end %>
-    </div>
-    <div class="col-lg-6">
-      <% unless current_user.guest? %>
-        <legend>Payment Settings</legend>
-        <div>
-          <% if current_user.api_key %>
-            <a href="#" class="stripe-connect light-blue dark"><span>Connected to Stripe <i class="icon-ok"></i></span></a>
-          <% else %>
-            <a href="/auth/stripe_connect" class="stripe-connect dark btn-medium"><span>Connect with Stripe</span></a>
-          <% end %>
-        </div><br>
-        <div class="text-centered">
-          <%= link_to "Reset Stripe", stripe_disconnect_user_path if current_user.api_key.present? %>
         </div>
-      <% end %>
+        <div class="form-group">
+          <label for="inputPassword1" class="col-lg-2 control-label">Name</label>
+          <div class="col-lg-6">
+            <input type="text" class="form-control" id="inputPassword1" placeholder="<%= @user.name %>">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-lg-offset-2 col-lg-6">
+            <button type="submit" class="btn btn-default">Update Account</button>
+          </div>
+        </div>
+      </form>
     </div>
-  </div>
-  <br>
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="table-responsive">
-        <table class="table table-hover table-bordered user-events-table">
-          <% @user.events.each do |e| %>
-          <legend>Your Events</legend>
-          <tbody>
-            <tr>
-              <td><%= link_to e.name, event_path(e) %></td>
-              <td><button class="btn">Authorize</button></td>
-              <td><button class="btn">Cancel</button></td>
-              <td><button class="btn">Defer</button></td>
-              <td><button class="btn">Message</button></td>
-              <td><%= link_to "Admin", admin_event_path(e) %></td>
-            </tr>
-          </tbody>
-          <% end %>
-        </table>
-      </div>
+    <div class="col-lg-3 col-lg-offset-1">
+      <% if current_user.api_key %>
+        <button type="button" class="btn btn-block btn-success"><span>Connected to Stripe <i class="icon-ok"></i></span></button>
+      <% else %>
+        <a href="/auth/stripe_connect" class="btn btn-block btn-default"><span>Connect with Stripe <i class="icon-credit-card"></i></span></a>
+      <% end %>
+      <%= link_to "Reset Password", password_resets_path(email: current_user.email), method: :post, class: "btn btn-block btn-info" %>
+      <%= link_to raw("Events Admin  <i class='icon-double-angle-right pull'></i>"), admin_event_path(@user.events.first), class: "btn btn-block btn-primary" %>
     </div>
   </div>
 </div>
