--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -28,10 +28,10 @@
 <section id="event-information">
 	<div class="progress">
 	  <div class="progress-bar progress-bar-success sold" role="progressbar" data-funded="<%= @event.per_cent_funded %>">
-		  <span><%= @event.per_cent_funded %>% funded</span>
+		  <span><%= @event.per_cent_funded %> sold</span>
 	  </div>
 	  <div class="progress-bar unsold">
-	    <span class="sr-only">20% Complete (warning)</span>
+	    <span class="">75 left</span>
 	  </div>
 	</div>
 	<div class="container">
