--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container well">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Hey <%= @user.name %></h1>
+      <h3 class="page-header">Settings</h3>
     </div>
   </div>
   <div class="row">
@@ -31,9 +31,48 @@
         <button type="button" class="btn btn-block btn-success"><span>Connected to Stripe <i class="icon-ok"></i></span></button>
       <% else %>
         <a href="/auth/stripe_connect" class="btn btn-block btn-default"><span>Connect with Stripe <i class="icon-credit-card"></i></span></a>
-      <% end %>
+      <% end %><br>
       <%= link_to "Reset Password", password_resets_path(email: current_user.email), method: :post, class: "btn btn-block btn-info" %>
-      <%= link_to raw("Events Admin  <i class='icon-double-angle-right pull'></i>"), admin_event_path(@user.events.first), class: "btn btn-block btn-primary" %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <h3 class="page-header">Events</h3>
+      <table class="table table-bordered text-center">
+        <tbody>
+          <% @user.events.each do |e| %>
+          <tr>
+            <td><%= link_to e.name, e %></td>
+            <td><%= e.location %></td>
+            <td>
+               <div class="progress">
+                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                   <span class="">60% Complete</span>
+                 </div>
+               </div>
+            </td>
+            <td>
+              <div class="btn-group">
+                <button type="button" class="btn btn-default">Cash $1000</button>
+                <button type="button" class="btn btn-default">Defer (3 days left)</button>
+                <button type="button" class="btn btn-default">Cancel Event</button>
+              </div>
+            </td>
+            <td>
+              <div class="btn-group">
+                <button type="button" class="btn btn-default">Message 100 Customers</button>
+                <button type="button" class="btn btn-default">Hide Event</button>
+              </div>
+            </td>
+            <td>
+              <div class="btn-group">
+                <%= link_to raw("Order List  <i class='icon-double-angle-right pull'></i>"), admin_event_path(@user.events.first), class: "btn btn-default" %>
+              </div>
+            </td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
